Updates to add base station info to anomalies
